--- a/Boot07_Final/src/main/resources/application.properties
+++ b/Boot07_Final/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 
 file.location=C:\\data
+
+server.error.path=/error
